<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.dimitriusdev.fragments.AuthFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/rectangle_shape_header"
        >

        <TextView
            android:id="@+id/textView4"
            android:textColor="@color/main_theme_color_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="35sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:textColor="@color/main_theme_color_2"
            android:text="@string/please_write_your_login_and_password"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
             />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="158dp" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:text="@string/log_in"
        android:background="@color/main_theme_color_1"
        android:textColor="@color/main_theme_color_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="278dp"
        android:layout_height="51dp"
        android:layout_marginBottom="124dp"
        android:text="@string/register"
        android:background="@color/main_theme_color_1"
        android:textColor="@color/main_theme_color_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <EditText
        android:id="@+id/editTextText"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/main_theme_color_2"
        android:hint="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="296dp"
        android:layout_height="42dp"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/main_theme_color_2"

        android:hint="@string/password_string"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>